[Fix]: Misaligned column in team management table, fixed (#5723)
[Fix]: Misaligned column is team management table, fixed

--- a/phytoplankton-console/src/pages/accounts/Team/index.module.less
+++ b/phytoplankton-console/src/pages/accounts/Team/index.module.less
@@ -17,7 +17,8 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  justify-content: center;
+  justify-content: flex-start;
+  padding: 4px;
 }
 
 .tag {
